@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.679 2005-06-13 16:27:54 castaglia Exp $
+$Id: NEWS,v 1.680 2005-06-15 17:38:55 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -36,6 +36,7 @@ CVS
 - Bug 2637 - <Limit STAT> does not work.
 - Bug 2636 - Data connection failure when handling STOR does not trigger
   error response.
+- Bug 2639 - HiddenStores does not work.
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
